# accent_classification

./: .env  Jenkinsfile  Makefile  README.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-test.txt  requirements.txt
accent_classification_engine/: audio_utils.py  classifier.py  custom_interface.py
accent_classification_ui/: streamlit_ui.py
config/: apllication-prod.yml  application-dev.yml
research/: generate_sample_dataset.ipynb  research-speechbrain_classification.ipynb  research-whisper_classification.ipynb
tests/: integration_test.py
